Fix: Tooltips and popouts opening too low

--- a/src/components/ui/_titlebar.scss
+++ b/src/components/ui/_titlebar.scss
@@ -35,5 +35,5 @@
 }
 
 .app{
-    margin-top: 32px;
+    padding-top: 32px;
 }
